# global-flow

./: .gitignore  README.md  microservices.txt
client/global-flow-platform/: README.md  pyproject.toml  run.sh
client/global-flow-platform/globalflow/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
client/global-flow-platform/globalflow/migrations/: 0001_initial.py  0002_alter_businessrole_guid_alter_dispatcher_guid_and_more.py  0002_sale.py  0003_alter_businessrole_guid_alter_dispatcher_guid_and_more.py  0004_alter_businessrole_guid_alter_dispatcher_guid_and_more.py
client/global-flow-platform/globalflow/static/css/: style.css
client/global-flow-platform/globalflow/templates/: base.html  broker.html  broker_type.html  business.html  dispatcher.html  exchange.html  exchange_process.html  index.html  insurance.html  radar.html  role.html  tax_regime.html  todos.html
client/global-flow-platform/globalflow/templates/registration/: login.html
client/global-flow-platform/manager/: settings.py  urls.py
client/global-flow-platform/scripts/: apply_migrations.sh  create_admin_user.sh  create_app.sh  init_base_django.sh  reset_admin_password.sh  setup_dev_env.sh
infrastructure/docker/: dev.compose.yaml
server/gf_customs_compliance/: Cargo.toml
server/gf_db_migrate_pipeline/: main.py  pyproject.toml
server/gf_document_management/: Cargo.toml
server/gf_extranalysis_agent/: main.py  pyproject.toml
server/gf_financial_costing/: Cargo.toml
server/gf_import_instruction/: Cargo.toml
server/gf_logistics/: Cargo.toml
(+3 files in other folders)
