[project]
name = "global-flow-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-admin>=2.0.2",
    "django-extensions>=3.2.3",
    "matplotlib>=3.10.1",
    "psycopg[binary,pool]>=3.2.6",
    "python-dotenv>=1.1.0",
]
